<resources>
    <string name="app_name">NEON</string>
    <string name="app_name_lowercase">Neon</string>
    <string name="accessibility_service_description">NEON</string>
    <string name="button_details">Button Details</string>
    <string name="set_keybind">Set Keybind</string>
    <string name="description_normal_button">Description: Normal Button</string>
    <string name="available_modifiers">Available Modifiers</string>
    <string name="overlay_button_color_preview">Overlay Button Color Preview</string>
    <string name="this_creates_a_normal_button">This Creates a New Normal Button</string>
    <string name="button">Normal Button</string>
    <string name="button_discript">This button simply sends whatever key you set as a keybind when clicked and will release when you release the button."</string>
    <string name="button_mod">\"&amp;\" Modifier: more keybinds to be pressed at the same time. EX: SPACE&amp;7 Do not put spaces in-between keys.</string>
    <string name="stickybutton">Sticky Button</string>
    <string name="stickybutton_discript">This button holds the keybind clicked until it is clicked again."</string>
    <string name="stickybutton_mod">\"&amp;\" Modifier: more keybinds to be pressed at the same time. Do not put spaces in-between keys. EX: SPACE&amp;7&amp;SHIFT</string>
    <string name="cyclebutton">Cycle Button</string>
    <string name="cyclebutton_discript">This button cycles through a defined list of keybinds. Each click goes to the next keybind."</string>
    <string name="cyclebutton_mod">\":\" Modifier: Separates items within the cycling list. An infinite amount of keys can be list using this modifier. EX: 1:2:3:4</string>
    <string name="joybutton">Joy Button</string>
    <string name="joybutton_discript">This button creates a joystick button that allows users to slide in 4 directions to press the corresponding keybind."</string>
    <string name="joybutton_mod">\":\" Modifier: Separates items within the joystick list. Only 4 keys can be set using this modifier, no more no less. EX: \"W:A:S:D\"</string>
    <string name="scrollbutton">Scroll Button</string>
    <string name="scrollbutton_discript">This button allows for horizontal scrolling through a keybind list. You can select which keybind you want to press by swiping left or right."</string>
    <string name="scrollbutton_mod">\":\" Modifier: Separates items within the cycling list. An infinite amount of keys can be list using this modifier. EX: 1:2:3:4:5</string>
        <string name="scut_deleted_pc">PC deleted</string>
        <string name="scut_not_paired">PC not paired</string>
        <string name="scut_pc_not_found">PC not found</string>
        <string name="scut_invalid_uuid">Provided PC is not valid</string>
        <string name="scut_invalid_app_id">Provided App is not valid</string>
        <string name="help_loading_title">Help Viewer</string>
        <string name="help_loading_msg">Loading help page…</string>
        <string name="pcview_menu_header_online">Online</string>
        <string name="pcview_menu_header_offline">Offline</string>
        <string name="pcview_menu_header_unknown">Refreshing</string>
        <string name="pcview_menu_app_list">View All Apps</string>
        <string name="pcview_menu_pair_pc">Pair with PC</string>
        <string name="pcview_menu_unpair_pc">Unpair</string>
        <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
        <string name="pcview_menu_delete_pc">Delete PC</string>
        <string name="pcview_menu_test_network">Test Network Connection</string>
        <string name="pcview_menu_details">View Details</string>
        <string name="pcview_menu_eol">NVIDIA GameStream End-of-Service</string>
        <string name="nettest_title_waiting">Testing Network Connection</string>
        <string name="nettest_text_waiting">Neon is testing your network connection to determine if any required ports are blocked.\n\nThis may take a few seconds…</string>
        <string name="nettest_title_done">Network Test Complete</string>
        <string name="nettest_text_success">Your network does not appear to be blocking Neon. If you still have trouble connecting, check your PC\'s firewall settings.\n\nIf you are trying to stream over the Internet, install the Neon Internet Hosting Tool on your PC and run the included Internet Streaming Tester to check your PC\'s Internet connection.</string>
        <string name="nettest_text_inconclusive">The network test could not be performed because none of Neon\'s connection testing servers were reachable. Check your Internet connection or try again later.</string>
        <string name="nettest_text_failure">Your device\'s current network connection seems to be blocking Neon. Streaming over the Internet may not work while connected to this network.\n\nThe following network ports were blocked:\n</string>
        <string name="nettest_text_blocked">Your device\'s current network connection is blocking Neon. Streaming over the Internet may not work while connected to this network.</string>
        <string name="pairing">Pairing…</string>
        <string name="pair_pc_offline">Computer is offline</string>
        <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
        <string name="pair_pairing_title">Pairing</string>
        <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
        <string name="pair_pairing_help">If your host PC is running Sunshine, navigate to the Sunshine web UI to enter the PIN.</string>
        <string name="pair_incorrect_pin">Incorrect PIN</string>
        <string name="pair_fail">Pairing failed</string>
        <string name="yes">Yes</string>
        <string name="no">No</string>
        <string name="category_basic_settings">Basic Settings</string>
        <string name="title_resolution_list">Video resolution</string>
        <string name="summary_resolution_list">Increase to improve image clarity. Decrease for better performance on lower end devices and slower networks.</string>
        <string name="title_fps_list">Video frame rate</string>
        <string name="summary_fps_list">Increase for a smoother video stream. Decrease for better performance on lower end devices.</string>
        <string name="title_seekbar_bitrate">Video bitrate</string>
        <string name="summary_seekbar_bitrate">Increase for better image quality. Decrease to improve performance on slower connections. Value in kbps.</string>
        <string name="suffix_seekbar_bitrate_mbps">Mbps</string>
        <string name="title_checkbox_stretch_video">Stretch video to full-screen</string>
    <string name="title_checkbox_fill_video">Fill video to full-screen</string>
        <string name="category_audio_settings">Audio Settings</string>
        <string name="title_audio_config_list">Surround sound configuration</string>
        <string name="summary_audio_config_list">Enable 5.1 or 7.1 surround sound for home-theater systems</string>
        <string name="title_checkbox_enable_audiofx">Enable system equalizer support</string>
        <string name="summary_checkbox_enable_audiofx">Allows audio effects to function while streaming, but may increase audio latency</string>
        <string name="category_input_settings">Input Settings</string>
        <string name="title_checkbox_touchscreen_trackpad">Use the touchscreen as a trackpad</string>
        <string name="summary_checkbox_touchscreen_trackpad">If enabled, the touchscreen acts like a trackpad. If disabled, the touchscreen directly controls the mouse cursor.</string>
        <string name="title_seekbar_deadzone">Adjust analog stick deadzone</string>
        <string name="summary_seekbar_deadzone">Note: Some games can enforce a larger deadzone than what Neon is configured to use. Value in percentage.</string>
        <string name="suffix_seekbar_deadzone">%</string>
        <string name="category_on_screen_controls_settings">On-screen Controls Settings</string>
        <string name="title_checkbox_vibrate_osc">Enable vibration</string>
        <string name="summary_checkbox_vibrate_osc">Vibrates your device to emulate rumble for the on-screen controls</string>
        <string name="summary_osc_opacity">Make the on-screen controls more/less transparent. Value in percentage.</string>
        <string name="dialog_title_osc_opacity">Change opacity</string>
        <string name="suffix_osc_opacity">%</string>
        <string name="category_host_settings">Host Settings</string>
        <string name="title_checkbox_enable_sops">Optimize game settings</string>
        <string name="summary_checkbox_enable_sops">Allow GFE to modify game settings for optimal streaming</string>
        <string name="title_checkbox_host_audio">Play audio on PC</string>
        <string name="summary_checkbox_host_audio">Play audio from the computer and this device</string>
        <string name="category_advanced_settings">Advanced Settings</string>
        <string name="title_unlock_fps">Unlock all possible frame rates</string>
        <string name="summary_unlock_fps">Streaming at 90 or 120 FPS may reduce latency on high-end devices but can cause lag or instability on devices that can\'t support it</string>
        <string name="title_checkbox_reduce_refresh_rate">Allow refresh rate reduction</string>
        <string name="summary_checkbox_reduce_refresh_rate">Lower display refresh rates can save power at the expense of some additional video latency</string>
        <string name="title_checkbox_disable_warnings">Disable warning messages</string>
        <string name="summary_checkbox_disable_warnings">Disable on-screen connection warning messages while streaming</string>
        <string name="title_video_format">Change codec settings</string>
        <string name="summary_video_format">Newer codecs can lower video bandwidth requirements if your device supports them. Codec selections may be ignored if not supported by the host software or GPU.</string>
        <string name="title_enable_hdr">Enable HDR (Experimental)</string>
        <string name="summary_enable_hdr">Stream HDR when the game and PC GPU support it. HDR requires a GPU with HEVC Main 10 encoding support.</string>
        <string name="title_enable_perf_overlay">Show performance stats while streaming</string>
        <string name="summary_enable_perf_overlay">Display real-time stream performance information while streaming</string>
        <string name="title_enable_post_stream_toast">Show latency message after streaming</string>
        <string name="summary_enable_post_stream_toast">Display a latency information message after the stream ends</string>
        <string name="title_frame_pacing">Video frame pacing</string>
        <string name="summary_frame_pacing">Specify how to balance video latency and smoothness</string>
    <string name="are_you_sure_you_want_to_delete_this_command">Are you sure you want to delete this command?</string>
    <string name="layouts">Controllers</string>
    <string name="settings">Settings</string>
    <string name="premium">Special Features</string>
    <string name="normal">Normal</string>
    <string name="basic_button_object">Basic button object</string>
    <string name="sticky">Sticky</string>
    <string name="click_once_to_hold_click_again_to_release">Click once to hold, click again to release</string>
    <string name="click_to_cycle_through_a_list_of_keybinds">Click to cycle through a list of keybinds</string>
    <string name="cycle">Cycle</string>
    <string name="joy">Joy</string>
    <string name="joystick_action_button">Joystick action button</string>
    <string name="scroll">Scroll</string>
    <string name="scroll_through_a_list_of_keybinds">Scroll through a list of keybinds</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="done">"Done "</string>
    <string name="back">Back</string>
</resources>