<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="http://schemas.moonlight-stream.com/apk/res/seekbar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_basic_settings"
        android:key="category_basic_settings">
        <ListPreference
            android:key="list_resolution"
            android:title="@string/title_resolution_list"
            android:summary="@string/summary_resolution_list"
            android:entries="@array/resolution_names"
            android:entryValues="@array/resolution_values"
            android:defaultValue="1280x720" />
        <ListPreference
            android:key="list_fps"
            android:title="@string/title_fps_list"
            android:summary="@string/summary_fps_list"
            android:entries="@array/fps_names"
            android:entryValues="@array/fps_values"
            android:defaultValue="30" />
        <SeekBarPreference
            android:dialogMessage="@string/summary_seekbar_bitrate"
            android:key="seekbar_bitrate_kbps"
            android:max="150000"
            android:summary="@string/summary_seekbar_bitrate"

            android:text="@string/suffix_seekbar_bitrate_mbps"
            android:title="@string/title_seekbar_bitrate"
            app:min="500"
            app:seekBarIncrement="500"
            android:defaultValue="5000"
            app:showSeekBarValue="true" />
        <ListPreference
            android:key="frame_pacing"
            android:title="@string/title_frame_pacing"
            android:entries="@array/video_frame_pacing_names"
            android:entryValues="@array/video_frame_pacing_values"
            android:summary="@string/summary_frame_pacing"
            android:defaultValue="smoothness" />
        <CheckBoxPreference
            android:key="checkbox_stretch_video"
            android:title="@string/title_checkbox_stretch_video"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="checkbox_fill_video"
            android:title="@string/title_checkbox_fill_video"
            android:defaultValue="false" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_audio_settings">
        <ListPreference
            android:key="list_audio_config"
            android:title="@string/title_audio_config_list"
            android:summary="@string/summary_audio_config_list"
            android:entries="@array/audio_config_names"
            android:entryValues="@array/audio_config_values"
            android:defaultValue="2" />
        <CheckBoxPreference
            android:key="checkbox_enable_audiofx"
            android:title="@string/title_checkbox_enable_audiofx"
            android:summary="@string/summary_checkbox_enable_audiofx"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_input_settings"
        android:key="category_input_settings">
        <SeekBarPreference
            android:key="seekbar_deadzone"
            android:defaultValue="7"
            android:max="20"
            android:summary="@string/summary_seekbar_deadzone"
            android:text="@string/suffix_seekbar_deadzone"
            android:title="@string/title_seekbar_deadzone"
            app:showSeekBarValue="true"
            />

        <SeekBarPreference
            app:isPreferenceVisible="false"
            android:key="gyro_seekbar"
            android:defaultValue="50"
            android:max="100"
            android:summary="Change the minimum threshold to begin detecting gyro motion"
            android:text="@string/suffix_seekbar_deadzone"
            android:title="Adjust gyro threshold"
            app:showSeekBarValue="true"
            />

        <CheckBoxPreference
            android:key="checkbox_touchscreen_trackpad"
            android:title="@string/title_checkbox_touchscreen_trackpad"
            android:summary="@string/summary_checkbox_touchscreen_trackpad"
            android:defaultValue="true"
            app:isPreferenceVisible="false"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_on_screen_controls_settings"
        android:key="category_onscreen_controls">
        <CheckBoxPreference
            android:key="checkbox_vibrate_osc"
            android:title="@string/title_checkbox_vibrate_osc"
            android:summary="@string/summary_checkbox_vibrate_osc"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="seekbar_osc_opacity"
            android:dialogMessage="@string/summary_osc_opacity"
            seekbar:min="0"
            seekbar:step="1"
            android:max="100"
            android:defaultValue="60"
            android:summary="@string/summary_osc_opacity"
            android:text="@string/suffix_osc_opacity"
            android:title="@string/dialog_title_osc_opacity"
            app:showSeekBarValue="true" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_host_settings">
        <CheckBoxPreference
            android:key="checkbox_enable_sops"
            android:title="@string/title_checkbox_enable_sops"
            android:summary="@string/summary_checkbox_enable_sops"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_host_audio"
            android:title="@string/title_checkbox_host_audio"
            android:summary="@string/summary_checkbox_host_audio"
            android:defaultValue="true" />
    </PreferenceCategory>
<!--    <PreferenceCategory android:title="@string/category_ui_settings"-->
<!--        android:key="category_ui_settings">-->
<!--        <CheckBoxPreference-->
<!--            android:key="checkbox_enable_pip"-->
<!--            android:title="@string/title_checkbox_enable_pip"-->
<!--            android:summary="@string/summary_checkbox_enable_pip"-->
<!--            android:defaultValue="false" />-->
<!--    </PreferenceCategory>-->
    <PreferenceCategory android:title="@string/category_advanced_settings"
        android:key="category_advanced_settings">
        <CheckBoxPreference
            android:key="checkbox_unlock_fps"
            android:title="@string/title_unlock_fps"
            android:summary="@string/summary_unlock_fps"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_enable_hdr"
            android:title="@string/title_enable_hdr"
            android:summary="@string/summary_enable_hdr"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_reduce_refresh_rate"
            android:title="@string/title_checkbox_reduce_refresh_rate"
            android:summary="@string/summary_checkbox_reduce_refresh_rate"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_disable_warnings"
            android:title="@string/title_checkbox_disable_warnings"
            android:summary="@string/summary_checkbox_disable_warnings"
            android:defaultValue="false" />
        <ListPreference
            android:key="video_format"
            android:title="@string/title_video_format"
            android:entries="@array/video_format_names"
            android:entryValues="@array/video_format_values"
            android:summary="@string/summary_video_format"
            android:defaultValue="auto" />
        <CheckBoxPreference
            android:key="checkbox_enable_perf_overlay"
            android:title="@string/title_enable_perf_overlay"
            android:summary="@string/summary_enable_perf_overlay"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="checkbox_enable_post_stream_toast"
            android:title="@string/title_enable_post_stream_toast"
            android:summary="@string/summary_enable_post_stream_toast"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <!--PreferenceCategory android:title="@string/category_help"
        android:key="category_help">
        <com.limelight.preferences.WebLauncherPreference
            android:title="@string/title_setup_guide"
            android:summary="@string/summary_setup_guide"
            url="https://github.com/moonlight-stream/moonlight-docs/wiki/Setup-Guide"/>
        <com.limelight.preferences.WebLauncherPreference
            android:title="@string/title_troubleshooting"
            android:summary="@string/summary_troubleshooting"
            url="https://github.com/moonlight-stream/moonlight-docs/wiki/Troubleshooting"/>
        <com.limelight.preferences.WebLauncherPreference
            android:title="@string/title_privacy_policy"
            android:summary="@string/summary_privacy_policy"
            url="https://moonlight-stream.org/privacy.html"/>
    </PreferenceCategory-->
</PreferenceScreen>
