<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/basic_white_border"
        android:backgroundTint="@color/black"
        android:elevation="8dp"
        android:gravity="right"
        android:paddingVertical="32dp"
        android:paddingHorizontal="4dp">

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="1"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="@string/layouts"
            app:selected="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="0"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="2"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="Commands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="5"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            android:id="@+id/premiumTab"
            app:tabText="@string/premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:index="3"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="Discord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="4"
            android:visibility="gone"/>

        <com.gingertech.starbeam.helpers.controllers.TabViewController
            app:tabText="Remap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:index="7"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>