<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:paddingTop="96dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

            <TextView
                android:id="@+id/stepTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 1."
                android:fontFamily="@font/oswald_medium"
                android:textSize="24sp"
                android:textColor="@color/primary"/>

            <TextView
                android:id="@+id/stepDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Go on your computer and go to the website www.neoncontroller.app\n\nFrom here click on the Downlaod Computer Host button.\n\nInstall this software on your computer."
                android:fontFamily="@font/dm_mono"
                android:textSize="16dp"
                android:textColor="@color/primary"/>

        </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/game_icon"
            android:layout_marginBottom="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">




    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/back"
        android:fontFamily="@font/oswald_medium"
        android:textSize="16sp"
        android:background="@drawable/stroke_rounded_rect_white"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"

        android:textColor="@color/black"/>

        <View
            android:layout_width="58dp"
            android:layout_height="1dp"/>

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/back"

        android:text="@string/done"
        android:fontFamily="@font/oswald_medium"
        android:textSize="16sp"
        android:background="@drawable/stroke_rounded_rect_white"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/primary"/>


        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/back"

            android:text="@string/next"
            android:fontFamily="@font/oswald_medium"
            android:textSize="16sp"
            android:background="@drawable/stroke_rounded_rect_white"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"

            android:textColor="@color/black"/>

    </LinearLayout>


    <TextView
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:text="Video Tutorial"
        android:fontFamily="@font/oswald_medium"
        android:textSize="16sp"
        android:background="@drawable/stroke_rounded_rect_white"
        android:backgroundTint="@color/secondary"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"

        android:textColor="@color/primary"

        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>